Add passing data from Timezones to WorldClocks
I also moved coordinator property from UIViewController to the Presenters, and added more comments.

--- a/World Clock Alarm/Front-end/NewTimezone/NewTimezone.storyboard
+++ b/World Clock Alarm/Front-end/NewTimezone/NewTimezone.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewTimezoneCell" id="m5g-AM-2De" customClass="TimezoneTableViewCell" customModule="World_Clock_Alarm" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TimezoneCell" id="m5g-AM-2De" customClass="TimezoneTableViewCell" customModule="World_Clock_Alarm" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="24.5" width="414" height="49.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="m5g-AM-2De" id="n8L-QS-vJt">
@@ -48,10 +48,11 @@
                             <outlet property="delegate" destination="BQz-mV-FX2" id="kxe-QM-bH0"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="I3f-Ak-OLT"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VIP-0i-bj5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3857.971014492754" y="103.79464285714285"/>
+            <point key="canvasLocation" x="4768.115942028986" y="103.79464285714285"/>
         </scene>
     </scenes>
     <resources>
